--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,19 +24,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  json_annotation: ^3.1.1
+  json_serializable: ^3.5.1
+  get_it: ^5.0.4
+  path_provider: ^1.6.27
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  test: ^1.15.7
+  build_runner: ^1.10.13
 
-# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
