--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^6.1.1
   equatable: ^1.2.5
   connectivity: ^2.0.2
+  webview_flutter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
